fix textarea wordwrap

--- a/tools/style.less
+++ b/tools/style.less
@@ -159,6 +159,7 @@ textarea {
     height: 250px;
     width: 100%;
     padding: .5em;
+    word-break: break-all;
     &:focus {
         border: 1px solid @red;
         outline: none;
